; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c_tl_act_stat.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c_tl_act_stat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_act_extra = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tl_act_stat(%struct.tl_act_extra* %0) #0 {
  %2 = alloca %struct.tl_act_extra*, align 8
  store %struct.tl_act_extra* %0, %struct.tl_act_extra** %2, align 8
  br i1 true, label %3, label %5

3:                                                ; preds = %1
  %4 = call i32 (...) @tl_stat_function()
  br label %7

5:                                                ; preds = %1
  %6 = call i32 (...) @default_stat_function()
  br label %7

7:                                                ; preds = %5, %3
  ret i32 0
}

declare dso_local i32 @tl_stat_function(...) #1

declare dso_local i32 @default_stat_function(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
